syntax = "proto3";

option go_package = "/";
package pb;
service eCommerceService{
  rpc CreateProduct(CreateProductReq) returns (Response) {}
  rpc UpdateProduct(UpdateProductReq) returns (Response) {}
}

message Response{
  int32 code = 1;
  string msg = 2;
  bytes result = 3;
}

message CreateProductReq{
  string productName = 1;
}

message UpdateProductReq{
  string spuId = 1;
  string productName = 2;
}